[package]
name = "cli-grep"
version = "0.1.2"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/tisma/rust/tree/master/cli_grep"
repository = "https://github.com/tisma/rust/tree/master/cli_grep"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
failure = "0.1.6"
exitfailure = "0.5.1"
indicatif = "0.13.0"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
assert_cmd = "0.10.0"
predicates = "1.0.2"
tempfile = "3"

[[bin]]
path = "src/cli-grep.rs"
name = "cli-grep"
