[package]
name = "project_euler"
version = "0.1.0"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"

[[bin]]
name = "sumdiff"
path = "src/sumdiff.rs"

[[bin]]
name = "sieve"
path = "src/sieve.rs"

[[bin]]
name = "bigint"
path = "src/bigint.rs"

[[bin]]
name = "englishify"
path = "src/englishify.rs"
