[package]
name = "speech_synthesis"
version = "0.1.0"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_polly = "0.40.0"
rusoto_core = "0.40.0"
rusoto_sqs = "0.40.0"
rusoto_s3 = "0.40.0"

[[bin]]
name = "speech_synthesis"
path = "src/speech_synthesis.rs"