[package]
name = "the_rust_programming_language"
version = "0.1.0"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"

[[bin]]
name = "guessing_game"
path = "src/chapter2/guessing_game.rs"

[[bin]]
name = "ownership"
path = "src/chapter3/ownership.rs"

[[bin]]
name = "structs"
path = "src/chapter5/structs.rs"

[[bin]]
name = "enum_match"
path = "src/chapter6/enum_match.rs"
