[package]
name = "the_rust_programming_language"
version = "0.1.0"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"

[[bin]]
name = "guessing_game"
path = "src/chapter2/guessing_game.rs"

[[bin]]
name = "ownership"
path = "src/chapter3/ownership.rs"

[[bin]]
name = "structs"
path = "src/chapter5/structs.rs"

[[bin]]
name = "enum_match"
path = "src/chapter6/enum_match.rs"

[[bin]]
name = "common_collections"
path = "src/chapter8/common_collections.rs"

[[bin]]
name = "errors"
path = "src/chapter9/errors.rs"

[[bin]]
name = "propagate_error"
path = "src/chapter9/propagate_error.rs"

[[bin]]
name = "duplicated_code"
path = "src/chapter10/duplicated_code.rs"

[[bin]]
name = "generics"
path = "src/chapter10/generics.rs"

[[bin]]
name = "traits"
path = "src/chapter10/traits.rs"

[[bin]]
name = "generic_trait_function"
path = "src/chapter10/generic_trait_function.rs"

[[bin]]
name = "lifetimes"
path = "src/chapter10/lifetimes.rs"

# [lib]
# name = "test_struct"
# path = "src/chapter11/test_struct.rs"

[[bin]]
name = "guessing_game_test"
path = "src/chapter11/guessing_game_test.rs"

[[bin]]
name = "minigrep"
path = "src/chapter12/minigrep.rs"

[lib]
name = "minigrep"
path = "src/chapter12/lib.rs"

[[bin]]
name = "functional"
path = "src/chapter13/functional.rs"
