[package]
name = "project"
version = "0.1.0"
authors = ["Miroslav Tisma <tisma.etf@gmail.com>"]

[dependencies]
session_types = "0.2.0"

[[bin]]
name = "linked_list"
src = "src/list.rs"

[[bin]]
name = "session"
src = "src/session.rs"

[[bin]]
name = "map"
src = "src/map.rs"

[[bin]]
name = "vectors"
src = "src/vectors.rs"

[[bin]]
name = "match_exclusive"
src = "src/match_exclusive.rs"

